--- a/mainapp/geekshop/mainapp/templates/mainapp/base.html
+++ b/mainapp/geekshop/mainapp/templates/mainapp/base.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 {% load static %}
 <html>
+
+
 <head>
-
-
     <meta charset="utf-8">
-	<title>
-        {% block title %}
-            {{ title|title }}
-        {% endblock %}
-    </title>
+    {% block title %}
+    {% endblock %}
+
+
     {% block css %}
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    {% endblock %}
+
+        <link rel="stylesheet" type = 'text/css' href="{% static 'css/style.css' %}">
         <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
     {% endblock %}
 
