--- a/mainapp/geekshop/mainapp/templates/mainapp/main.html
+++ b/mainapp/geekshop/mainapp/templates/mainapp/main.html
@@ -14,8 +14,14 @@
 
 {% block content %}
     <h1 class="test">Главная</h1>
-    {% if username %}
-        <h2> Привет, {{username| title}}! </h2>
+    {%if request.user.is_authenticated %}
+        <h2> Привет, {{request.user.username| title}}! </h2>
+        <a href="{ % url 'auth:edit' request.user.pk % }"> Редактировать </a>>
+        <br>
+        <a href ="{% url 'auth:logout' %}">Выйти </a>
+    {% else %}
+    <h2> Войдите </h2>
+    <a href="{% url 'auth:login'%}"> Войти </a>
     {% endif %}
 {% now "Y" %}
 
